[gd_scene load_steps=4 format=3 uid="uid://bc3y0v5ahlnyh"]

[ext_resource type="Script" path="res://menu_scenes/create_buttons.gd" id="1_1wqmj"]
[ext_resource type="Theme" uid="uid://blaq7x4kkgwyl" path="res://menu_scenes/main_theme.tres" id="1_vplnv"]
[ext_resource type="Script" path="res://menu_scenes/FileDialog_load.gd" id="3_oal05"]

[node name="main_buttons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1wqmj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="New" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vplnv")
text = "New"

[node name="Load" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vplnv")
text = "Load"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vplnv")
text = "Back"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
title = "Open a File or Directory"
position = Vector2i(264, 128)
size = Vector2i(629, 433)
unresizable = true
ok_button_text = "Open"
file_mode = 3
access = 2
script = ExtResource("3_oal05")

[connection signal="pressed" from="CenterContainer/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Load" to="CanvasLayer/FileDialog" method="_on_load_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="confirmed" from="CanvasLayer/FileDialog" to="CanvasLayer/FileDialog" method="_on_confirmed"]
[connection signal="load_scene" from="CanvasLayer/FileDialog" to="." method="_on_file_dialog_load_scene"]
